--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.NetworkMeUp"
         tools:targetApi="31">
         <activity
+            android:name=".view.Login.LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".domain.MainActivity"
             android:exported="true">
             <intent-filter>
