--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.NetworkMeUp"
         tools:targetApi="31">
         <activity
+            android:name=".view.LoginEmployee.LoginEmployeeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.SignUpEmployer.SignUpEmployerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.SignUpEmployee.SignUpEmployeeActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.SignUp.SignUpActivity"
             android:exported="false" />
         <activity
