--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.NetworkMeUp"
         tools:targetApi="31">
         <activity
+            android:name=".view.HomeEmployee.HomeEmployeeActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.LoginEmployer.LoginEmployerActivity"
             android:exported="false" />
         <activity
