--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.NetworkMeUp"
         tools:targetApi="31">
         <activity
+            android:name=".view.EditAccountEmployee.EditAccountEmployeeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.SearchJobs.SearchJobsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ModifyCV.ModifyCVActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.HomeEmployee.HomeEmployeeActivity"
             android:exported="false" />
         <activity
