--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,12 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NetworkMeUp"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".view.ManageJobPositions.ChangeJobDetails.ChangeJobDetailsActivity"
+            android:name=".view.ManageJobPositions.ChangeJobDetails.EditReqLangKnowledge.EditReqLangKnowledgeActivity"
             android:exported="false" />
         <activity
-            android:name=".view.ManageJobPositions.AddNewJob.AddNewJobActivity"
+            android:name=".view.ManageJobPositions.ChangeJobDetails.EditReqWorkExperience.EditReqWorkExperienceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ManageJobPositions.ChangeJobDetails.EditReqEducation.EditReqEducationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ManageJobPositions.ChangeJobDetails.ChangeJobDetailsActivity"
             android:exported="false" />
         <activity
             android:name=".view.ManageJobPositions.ManageJobPositionsActivity"
@@ -86,7 +92,7 @@
             android:exported="false" />
         <activity
             android:name=".view.StartPage.StartPageActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
