--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,11 @@
         android:theme="@style/Theme.NetworkMeUp"
         tools:targetApi="31">
         <activity
+            android:name=".view.EditAccountEmployee.ShowApplicationsEmployee.ShowApplicationsEmployeeActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.ManageJobPositions.ChangeJobDetails.EditReqLangKnowledge.AddNewReqLangKnowledge.AddNewReqLangKnowledgeActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".view.ManageJobPositions.ChangeJobDetails.EditReqLangKnowledge.ChangeReqLangKnowledgeDetails.ChangeReqLangKnowledgeDetailsActivity"
             android:exported="false" />
